--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,24 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.info-wrapper{
+  display: flex;
+  /* border: 5px solid; */
+  justify-content: center;
+  gap: 52px;
+}
+
+.info {
+  /* border: 1px solid; */
+  display: flex;
+  text-align: center;
+  flex-wrap: wrap;
+  max-width: 200px;
+  justify-content: center;
 }
 
 /* do not edit this footer */
