--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -35,7 +35,6 @@ body {
 
 ul {
   list-style-type: none;
-  padding: 0;
 }
 
 li {
@@ -46,12 +45,14 @@ a {
   text-decoration: none;
 }
 
-.body {
+/* Main container for content other than header and footer */
+.container {
   flex: 1;
   display: flex;
 }
 
-.content
+/* Container for cards. Need to change this to flex row and allow wrapping */
+.card-container
 {
   display: flex;
   flex-direction: row;
@@ -61,6 +62,7 @@ a {
 }
 
 .card {
+  /* defining card width is important for flex wrap to work */
   width: 250px;
   padding: 32px;
 }
