--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -8,6 +8,11 @@ body, html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+
+  display:grid;
+  grid-template-columns: 300px 1fr 1fr;
+  grid-template-rows: 100px 100px 550px 100px;
+  gap: 15px;
 }
 
 .container div {
@@ -21,18 +26,26 @@ body, html {
 
 .header {
   background-color: #FFDE22;
+  grid-column: 1/span 3;
 }
 
 .sidebar {
   background-color: #FF7755;
+
+  grid-row: 2/4;
+  grid-column: 1/2;
 }
 
 .nav {
   background-color: #00DDFF;
+
+  grid-column: 2/4;
 }
 
 .article {
   background-color: #bccbde;
+
+  grid-column: 2/span 2;
 }
 
 .article p {
@@ -44,4 +57,6 @@ body, html {
 
 .footer {
   background-color: #393f4d;
+
+  grid-column: span 3;
 }
