--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -3,8 +3,16 @@
   padding: 0;
 }
 
+ul{
+  list-style-type: none;
+}
+
 .container {
   text-align: center;
+
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 4px;
 }
 
 .container div {
@@ -17,6 +25,29 @@
 
 .header {
   background-color: #393f4d;
+  grid-column: span 2;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.header .logo {
+  justify-self: start;
+}
+
+.menu ul {
+  display: grid;
+
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr;
+  gap: 15px;
+}
+
+.nav ul {
+  display: grid;
+
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
 }
 
 .menu ul,
@@ -26,6 +57,14 @@
 
 .sidebar {
   background-color: #FF7755;
+
+  grid-row-end: span 2;
+  display: grid;
+  gap: 50px;
+}
+
+.sidebar div {
+
 }
 
 .sidebar .photo {
@@ -55,6 +94,12 @@
 
 .article {
   background-color: #bccbde;
+  
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+
+  grid-auto-flow: row;
+  gap: 15px;
 }
 
 .article p {
@@ -70,6 +115,10 @@
   text-align: center;
 }
 
+.card {
+  height: 200px;
+}
+
 .card p {
   color: black;
   font-weight: normal;
@@ -83,9 +132,10 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: span 2;
 }
 
 .footer p {
   font-size: 13px;
-  font-weight: normal;  
+  font-weight: normal;
 }
